@@ -23,6 +23,10 @@ Version 1.4.11 - SVN
     saved or sent.
   - Added ability to detect HTTP_X_FORWARDED_PROTO in get_location(),
     thanks to Daniel Watts
+  - Fix test for signout.php in the logged in check in is_logged_in() so it
+    cannot be circumvented by manipulating the URL. External plugins might
+    rely on this function guaranteeing that the user is logged in.
+
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
